--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -9,73 +9,31 @@
 
     <EditText
         android:id="@+id/et_team_name"
-        android:layout_width="201dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginStart="80dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
         android:hint="Team Name"
-        android:paddingTop="@dimen/input_text_padding_top"
-        android:paddingBottom="@dimen/input_text_padding_bottom" />
-
-    <EditText
-        android:id="@+id/et_team_sport"
-        android:layout_width="201dp"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_row="1"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_marginStart="80dp"
-        android:layout_marginBottom="20dp"
-        android:hint="Team Sport"
+        android:layout_gravity="center"
         android:paddingTop="@dimen/input_text_padding_top"
         android:paddingBottom="@dimen/input_text_padding_bottom" />
 
 
     <TextView
         android:id="@+id/tv_game_players"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Players"
-        android:layout_marginStart="80dp"
-        android:textSize="18sp"
-        android:layout_row="2"
-        android:layout_column="0"
-        android:paddingLeft="@dimen/text_view_padding_left"
-        android:paddingRight="@dimen/text_view_padding_right" />
-
-
-
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_margin="16dp" >
+        android:text="Select Players"
+        android:textSize="18sp"
+        android:layout_gravity="center" />
 
-        <Button
-            android:layout_width="0dp"
-            android:id="@+id/btn_cancel_create_team"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:layout_weight="1"
-            android:paddingLeft="@dimen/button_padding_text_left_right"
-            android:paddingRight="@dimen/button_padding_text_left_right"
-            android:height="@dimen/button_padding_height" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_create_team"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scrollbars="vertical"
+        android:layout_weight="20"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
 
-        <Button
-            android:layout_width="0dp"
-            android:id="@+id/btn_confirm_create_team"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:text="Confirm"
-            android:paddingLeft="@dimen/button_padding_text_left_right"
-            android:paddingRight="@dimen/button_padding_text_left_right"
-            android:height="@dimen/button_padding_height" />
-
-
-    </LinearLayout>
 
 </android.support.v7.widget.LinearLayoutCompat>
 
