--- a/app/src/main/res/layout/team_card.xml
+++ b/app/src/main/res/layout/team_card.xml
@@ -34,7 +34,7 @@
 
         <TextView
             android:id="@+id/tv_team_card_info_admin"
-            android:layout_width="55dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_team_card_name"
             android:layout_marginTop="8dp"
