--- a/app/src/main/res/layout/navigation_menu_header.xml
+++ b/app/src/main/res/layout/navigation_menu_header.xml
@@ -1,60 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="192dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view_user_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:elevation="12dp"
-        android:layout_centerHorizontal="true"
-        android:innerRadius="0dp"
-        android:shape="ring"
-        app:cardCornerRadius="40dp"
-        android:thicknessRatio="1.9"
-        android:layout_marginBottom="5dp">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/img_user"
-            android:layout_width="80dp"
-            android:layout_height="90dp"
-            android:src="@drawable/noodles"
-            app:civ_border_width="1dp"
-            app:civ_border_color="#FF000000"/>
-
-    </android.support.v7.widget.CardView>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_nav_header_name"
-            android:layout_width="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/text_view_padding_left"
-            android:paddingRight="@dimen/text_view_padding_right" />
 
-        <TextView
-            android:id="@+id/tv_nav_header_player_handle"
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view_user_image"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="5dp"
+            android:elevation="12dp"
+            android:innerRadius="0dp"
+            android:shape="ring"
+            android:thicknessRatio="1.9"
+            app:cardCornerRadius="40dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/img_user"
+                android:layout_width="80dp"
+                android:layout_height="90dp"
+                android:src="@drawable/noodles"
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="1dp" />
+
+        </android.support.v7.widget.CardView>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:paddingLeft="@dimen/text_view_padding_left"
-            android:paddingRight="@dimen/text_view_padding_right" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_nav_header_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="18dp"
+                android:paddingLeft="@dimen/text_view_padding_left"
+                android:paddingRight="@dimen/text_view_padding_right" />
+
+            <TextView
+                android:id="@+id/tv_nav_header_player_handle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/text_view_padding_left"
+                android:paddingRight="@dimen/text_view_padding_right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-
+    <Button
+        android:id="@+id/btn_nav_header_edit_profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:text="edit Profile"/>
 </LinearLayout>
