--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical" >
 
 
-        <TextView
+        <Button
             android:id="@+id/tv_create_game_main_team"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
             android:textColor="@color/textLight"
             android:textSize="@dimen/font_size_app_bar" />
 
-        <TextView
+        <Button
             android:id="@+id/tv_create_game_challenged_team"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
-            <TextView
+            <Button
                 android:id="@+id/tv_create_game_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
                 android:textSize="@dimen/font_size_app_bar" />
 
 
-            <TextView
+            <Button
                 android:id="@+id/tv_create_game_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -70,20 +70,7 @@
 
         </LinearLayout>
 
-        <Spinner
-            android:id="@+id/spn_create_game_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:entries="@array/sports"
-            android:paddingBottom="16dp"
-            android:paddingLeft="@dimen/text_view_padding_left"
-            android:paddingRight="@dimen/text_view_padding_right"
-            android:paddingTop="16dp">
-
-        </Spinner>
-
-        <TextView
+        <Button
             android:id="@+id/tv_create_game_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
